<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666666">
    <item
        android:id="@+id/newsFragment"
        android:title="@string/news"
        app:cnb_iconColor="#9C27B0"
        android:icon="@drawable/news"/>
    <item
        android:id="@+id/hoaxFragment"
        android:title="@string/hoax"
        app:cnb_iconColor="#ffd600"
        android:icon="@drawable/fake_news"/>
    <item
        android:id="@+id/bookmarkFragment"
        android:title="@string/bookmark"
        app:cnb_iconColor="#F44336"
        android:icon="@drawable/ic_bookmark"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/Settings"
        app:cnb_iconColor="#76ff03"
        android:icon="@drawable/ic_baseline_settings_24"
        />
</menu>